#7521 - fix left title alignment

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -90,6 +90,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   gap: calcSize(4);
+  align-items: center;
 }
 
 .sd-question__content--left {
